scrollbar display fix

--- a/src/styles/SearchPage/_SearchPageNavbar.scss
+++ b/src/styles/SearchPage/_SearchPageNavbar.scss
@@ -190,5 +190,9 @@
   }
   .search-page-nav-list {
     overflow: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
